@@ -49,7 +49,6 @@
 
 #define NDEBUG
 
-#include <alloca.h>
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
