@@ -46,7 +46,6 @@
 
 #include "config.h"
 
-#include <alloca.h>
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
