@@ -47,7 +47,6 @@
 
 #include "config.h"
 
-#include <alloca.h>
 #include <stdlib.h>
 #include <string.h>
 #include <assert.h>
