@@ -3,6 +3,7 @@ Change log for hexer, the multi-view binary editor
 1.0.0	not yet
 	- drop support for ancient compilers that do not support
 	  the "const" keyword or do not provide the alloca() function
+	- fix the build on systems that do not need or have alloca.h
 
 0.2.3	2015/12/10
 	- build with large file support on Linux
